--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<header class="major">
 									<h2><a href="#">Data Cleaning<br />
 									in SQL</a></h2>
-									<p>In this project we take raw housing data and transform <br />
+									<p>In this project took a look at raw housing data and transform <br />
 									it in SQL Server to make it more usable for analysis.<br />
 									</p>
 								</header>
@@ -66,18 +66,18 @@
 										Data Exploration</a></h2>
 									</header>
 									<a href="https://github.com/PayalTheAnalyst/DataPortfolioProjects/blob/main/CovidPortfolioScript.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>In this project we use SQL Server to explore global COVID 19 data. </p>
+									<p>In this project used SQL Server to explore global COVID 19 data. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/PayalTheAnalyst/DataPortfolioProjects/blob/main/CovidPortfolioScript.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tableau Dashboards<br />
+										<h2><a href="#">Tableau Dashboard<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/payal7393/viz/CovidDashboardProject_16455806194490/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football </p>
+									<p>Tableau Dashboards for project on COVID 19</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/payal7393/viz/CovidDashboardProject_16455806194490/Dashboard1" class="button">View Project</a></li>
 									</ul>
@@ -88,7 +88,7 @@
 										with Python</a></h2>
 									</header>
 									<a href="https://github.com/PayalTheAnalyst/DataPortfolioProjects/blob/main/MoviesCorrelation.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
-									<p>In this project we look at what variables effect the gross revenue from movies.</p>
+									<p>In this project took a look at what variables effect the gross revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/PayalTheAnalyst/DataPortfolioProjects/blob/main/MoviesCorrelation.ipynb" class="button">View Project</a></li>
 									</ul>
